src/components/Character/Character.scss
@import '../../helpers.scss';

.character {
  background: $secondary-background;
  padding: 1rem;
  border-radius: $border-radius;
  margin-bottom: 2rem;

  .head {
    display: flex;
    align-items: center;
    gap: 1rem;
    .img-container {
      display: flex;
      flex-shrink: 0;
      justify-content: center;
      align-items: center;
      background: $tertiary-background;
      border-radius: 50%;
      width: 100px;
      height: 100px;
      img {
        object-fit: contain;
        width: 60px;
        height: 60px;
      }
    }
    .info {
      width: 100%;

      .info-heading {
        display: flex;
        gap: 0.25rem;
        margin-bottom: 0.75rem;
        .level {
          color: $secondary-text;
        }
        .coins {
          display: flex;
          align-items: center;
          gap: 0.15rem;
          margin-left: auto;
          color: $coin-color;
          .text {
            display: flex;
            font-weight: 500;
            height: 1rem;
          }
          .coin-icon {
            height: 20px;
            width: 20px;
          }
        }
      }
      .exp-bar-container {
        display: flex;
        flex-direction: column;
        gap: 0.25rem;
        width: 100%;
        margin-bottom: 0.5rem;

        .bar {
          position: relative;
          display: flex;
          align-items: center;
          width: 100%;
          height: 20px;
          background: $tertiary-background;
          border-radius: $border-radius;
          .exp {
            background: $exp-color;
            height: 100%;
            border-radius: $border-radius;
          }
          .icon {
            position: absolute;
            padding-left: 0.25rem;
            height: 16px;
            width: 16px;
            color: $secondary-text;
          }
        }
        .text {
          display: flex;
          justify-content: space-between;
          width: 100%;
          font-size: 0.7rem;
          color: $secondary-text;
          white-space: nowrap;
        }
      }
    }
  }
}

